[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/SCControl.gd" type="Script" id=1]

[node name="SCControl" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
timeMul = 5

[node name="GrassTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="SoilTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[connection signal="timeout" from="GrassTimer" to="." method="_on_GrassTimer_timeout"]

[connection signal="timeout" from="SoilTimer" to="." method="_on_SoilTimer_timeout"]


